--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yogeendra Rao - Senior Software Developer Portfolio</title>
+    <title>Yogeendra Rao - Senior Applications Engineer Portfolio</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Apply custom Tailwind configuration for Inter font -->
@@ -65,8 +65,8 @@
 
     const PROFILE_DATA = {
         name: "Yogeendra Rao",
-        title: "Senior Software Developer",
-        summary: "Senior Backend Developer with a decade of expertise in building robust, high-availability server applications, specializing in the Java/Microservices (Spring/Jersey) stack and Oracle/Azure SQL databases. Combines core development proficiency with experience in Big Data tools (PySpark, Databricks) for complex data processing and reporting. Extensive experience in modern DevOps practices, including GitHub/Gitlab CI/CD, Docker, and Kubernetes, ensuring code quality via SonarQube and delivering performant solutions in high-compliance sectors like Healthcare and Financial Services.",
+        title: "Senior Applications Engineer",
+        summary: "Senior Full Stack Developer with a decade of expertise in building robust, high-availability server applications, specializing in the Java/Microservices (Spring/Jersey) stack and Oracle/Azure SQL databases. Combines core development proficiency with experience in Big Data tools (PySpark, Databricks) for complex data processing and reporting. Extensive experience in modern DevOps practices, including GitHub/Gitlab CI/CD, Docker, and Kubernetes, ensuring code quality via SonarQube and delivering performant solutions in high-compliance sectors like Healthcare and Financial Services.",
         contact: {
             email: "yogeendra.r@gmail.com",
             phone: "+91 9902901078",
